--- a/rca/static_src/sass/components/_image-video-block.scss
+++ b/rca/static_src/sass/components/_image-video-block.scss
@@ -84,7 +84,8 @@
         }
     }
 
-    .programme-overview & {
+    .programme-overview &,
+    .research-centre-overview & {
         padding-bottom: 0;
     }
 
