--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -70,6 +70,7 @@
 @import 'components/proposition-statement';
 @import 'components/related-content';
 @import 'components/related-links';
+@import 'components/research-centre-overview';
 @import 'components/responsive-object';
 @import 'components/rich-text';
 @import 'components/scroll';
