--- a/rca/static_src/sass/components/_research-centre-overview.scss
+++ b/rca/static_src/sass/components/_research-centre-overview.scss
@@ -1,4 +1,8 @@
 .research-centre-overview {
+    @include media-query(large) {
+        margin-bottom: ($gutter * 4);
+    }
+
     &__content {
         grid-column: 1 / span 2;
 
