Staggered card component - desktop styling

--- a/rca/static_src/sass/components/_card.scss
+++ b/rca/static_src/sass/components/_card.scss
@@ -66,6 +66,25 @@
         }
     }
 
+    &--simple {
+        #{$root}__content {
+            position: static;
+            margin: 0;
+            padding-right: 0;
+            flex-basis: 100%;
+            max-width: 100%;
+            min-width: 100%;
+        }
+
+        #{$root}__heading {
+            @include font-size(xs);
+        }
+
+        #{$root}__description {
+            @include font-size(xxs);
+        }
+    }
+
     &__container {
         display: flex;
         flex-direction: column;
@@ -338,6 +357,23 @@
         }
     }
 
+    .staggered-cards & {
+        @include media-query(large) {
+            flex-basis: 33.333%;
+            max-width: 333.333%;
+            min-width: 33.333%;
+        }
+
+        &:nth-child(even) {
+            @include media-query(large) {
+                position: relative;
+                margin-left: 66.666%;
+                top: -($gutter * 8);
+                margin-bottom: -($gutter * 12);
+            }
+        }
+    }
+
     .bg--dark & {
         &#{$root}--image {
             #{$root}__content {
@@ -360,6 +396,12 @@
 
         #{$root}__meta {
             color: $color--tertiary;
+        }
+
+        &--simple {
+            #{$root}__description {
+                color: $color--white;
+            }
         }
     }
 
@@ -385,6 +427,12 @@
 
         #{$root}__meta {
             color: $color--black;
+        }
+
+        &--simple {
+            #{$root}__description {
+                color: $color--black;
+            }
         }
     }
 }
