--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -85,6 +85,7 @@
 @import 'components/social-item';
 @import 'components/staff-body';
 @import 'components/staff-overview';
+@import 'components/staggered-cards';
 @import 'components/step-item';
 @import 'components/stat-block';
 @import 'components/steps';
