--- a/rca/static_src/sass/components/_staggered-cards.scss
+++ b/rca/static_src/sass/components/_staggered-cards.scss
@@ -1,5 +1,6 @@
 .staggered-cards {
     margin-bottom: ($gutter * 2);
+    grid-column: 1 / span 2;
 
     @include media-query(large) {
         grid-column: 2 / span 3;
