--- a/rca/project_styleguide/templates/patterns/molecules/category-item/category-item.html
+++ b/rca/project_styleguide/templates/patterns/molecules/category-item/category-item.html
@@ -1,4 +1,4 @@
-<div class="category-item__wrapper grid">
+<div class="category-item__wrapper">
     {% if item.link %}
         <a href="{{ item.link }}" class="category-item">
     {% endif %}
