--- a/rca/static_src/javascript/programmes/components/ProgrammesCategories/CategoriesPanels.scss
+++ b/rca/static_src/javascript/programmes/components/ProgrammesCategories/CategoriesPanels.scss
@@ -12,4 +12,12 @@
             }
         }
     }
+
+    .section__content & {
+        margin-bottom: ($gutter * 2);
+
+        @include media-query(large) {
+            margin-bottom: ($gutter * 4);
+        }
+    }
 }
