--- a/rca/project_styleguide/templates/patterns/pages/shortcourses/short_course.html
+++ b/rca/project_styleguide/templates/patterns/pages/shortcourses/short_course.html
@@ -32,6 +32,8 @@
                     {% if page.title %}
                         <h1 property="schema:name" class="title-area__heading heading heading--display-two">{{ page.title }}</h1>
                     {% endif %}
+                    <h2>Access planit data</h2>
+                    {{ ap_data }}
                 </div>
             </div>
         </header>
