--- a/rca/project_styleguide/templates/patterns/molecules/booking-bar/booking-bar.html
+++ b/rca/project_styleguide/templates/patterns/molecules/booking-bar/booking-bar.html
@@ -2,7 +2,7 @@
     {% include "patterns/atoms/grid-lines/grid-lines.html" %}
     <div class="booking-bar__container grid">
         <div class="booking-bar__message">
-            {{ item.message }}
+            {{ item.message }} {{ item.date|date:'d F Y' }}
         </div>
         <div class="booking-bar__action">
             {% include "patterns/atoms/modal-launcher/modal-launcher.html" %}
