--- a/rca/project_styleguide/templates/patterns/pages/shortcourses/short_course.html
+++ b/rca/project_styleguide/templates/patterns/pages/shortcourses/short_course.html
@@ -41,12 +41,11 @@
             </div>
         </header>
 
-        {% if page.booking_bar %}
-            {% include "patterns/molecules/booking-bar/booking-bar.html" with item=page.booking_bar modal='booking-details' %}
+        {% if booking_bar %}
+            {% include "patterns/molecules/booking-bar/booking-bar.html" with item=booking_bar modal=booking_bar.modal %}
         {% endif %}
 
         <div class="page__content js-sticky-point">
-            {% include "patterns/molecules/booking-bar/booking-bar.html" with item=booking_bar %}
 
             <section class="section section--start bg bg--dark">
 
@@ -62,7 +61,7 @@
                         </div>
                         <div class="programme-overview__body">
                             {% if page.introduction_image %}
-                                {% include "patterns/organisms/image-video-block/image-video-block.html" with modal=page.video out_of_grid=True curriculum=False heading=False has_meta=False copy=False subheading=False image=page.introduction_image caption=page.video_caption %}
+                                {% include "patterns/organisms/image-video-block/image-video-block.html" with modal=page.video out_of_grid=True curriculum=False heading=False has_meta=False copy=False subheading=False image=page.introduction_image caption=page.video_caption video=page.video %}
                             {% endif %}
                             <div class="programme-overview__description rich-text">
                                 {{ page.body|safe }}
@@ -157,29 +156,5 @@
             {% endif %}
 
         </div>
-
-        {% if page.booking_bar %}
-            <div class="page__modals">
-                <div class="modal" id="booking-details" aria-hidden="true">
-                    <div class="modal__overlay bg bg--light" tabindex="-1">
-                        {% include "patterns/atoms/grid-lines/grid-lines.html" %}
-                        <div class="modal__header grid">
-                            <button class="modal__close" aria-label="Close modal" data-micromodal-close>
-                                <span class="modal__close-label">Close</span>
-                                <svg width="14" height="14" class="modal__close-icon" aria-hidden="true"><use xlink:href="#close"></use></svg>
-                            </button>
-                        </div>
-                        <div class="modal__container grid" role="dialog" aria-modal="true" aria-labelledby="booking-details-title">
-                            <div class="modal__content">
-                                {% include "patterns/molecules/short-course-details/short-course-details.html" %}
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        {% endif %}
-
-
-
     </div>
 {% endblock %}
