Wire up modal and correct pattern variables

--- a/rca/project_styleguide/templates/patterns/molecules/short-course-details/short-course-details.html
+++ b/rca/project_styleguide/templates/patterns/molecules/short-course-details/short-course-details.html
@@ -1,7 +1,7 @@
 <div class="short-course-details">
     <div class="short-course-details__container">
         <div class="short-course-details__header">
-            <h1 class="short-course-details__heading heading heading--two">Design Thinking & Innovation</h1>
+            <h1 class="short-course-details__heading heading heading--two">{{ page.title }}</h1>
         </div>
         <div class="short-course-details__content">
             <div class="short-course-details-item">
