--- a/rca/project_styleguide/templates/patterns/molecules/upcoming-dates/upcoming-dates.html
+++ b/rca/project_styleguide/templates/patterns/molecules/upcoming-dates/upcoming-dates.html
@@ -20,10 +20,10 @@
     </div>
     <div class="upcoming-dates__footer">
         <div class="upcoming-dates__footer-action">
-            <a class="upcoming-dates__footer-link link link--tertiary" href='#'>Register your interest</a>
+            <a class="upcoming-dates__footer-link link link--tertiary" href='{{ register_interest_link }}'>Register your interest</a>
         </div>
-        <div class="upcoming-dates__footer-action">
+        {% comment %} <div class="upcoming-dates__footer-action">
             <a class="upcoming-dates__footer-link link link--tertiary" href='#'>View basket (2)</a>
-        </div>
+        </div> {% endcomment %}
     </div>
 </div>
