Spacing fixes on staff detail

--- a/rca/project_styleguide/templates/patterns/pages/staff/staff_detail.html
+++ b/rca/project_styleguide/templates/patterns/pages/staff/staff_detail.html
@@ -58,7 +58,7 @@
 
         <div class="page__content">
 
-            <section class="section section--start bg bg--dark">
+            <section class="section bg bg--dark">
 
                 <div class="section__row staff-body">
                     <div class="staff-body__container grid">
