--- a/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--centre.html
+++ b/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--centre.html
@@ -1,4 +1,4 @@
-<div class="key-details key-details--staff">
+<div class="key-details key-details--centre">
     <div class="key-details__header">
         <h3 class="heading heading--five key-details__heading">Key details</h3>
     </div>
