--- a/rca/static_src/sass/components/_title-area.scss
+++ b/rca/static_src/sass/components/_title-area.scss
@@ -138,6 +138,16 @@
     }
 
     &--research-centre {
+        padding-bottom: ($gutter * 2);
+
+        @include media-query(medium) {
+            padding-bottom: ($gutter * 2);
+        }
+
+        @include media-query(large) {
+            padding-bottom: ($gutter * 2.25);
+        }
+
         #{$root}__content {
             @include media-query(medium) {
                 // Titles are generally longer on research centre pages, so give them more space on tablets
