Removing extra “to”

--- a/rca/project_styleguide/templates/patterns/molecules/upcoming-dates/upcoming-dates.html
+++ b/rca/project_styleguide/templates/patterns/molecules/upcoming-dates/upcoming-dates.html
@@ -17,7 +17,7 @@
         </div>
         <div class="upcoming-dates__row">
             <div class="upcoming-dates__row-item upcoming-dates__row-item--mobile" aria-hidden="true">10 March 2020 to 15 March 2020</div>
-            <div class="upcoming-dates__row-item upcoming-dates__start-date">10 March 2020 <span class="upcoming-dates__start-date--mobile">to</span></div>
+            <div class="upcoming-dates__row-item upcoming-dates__start-date">10 March 2020</div>
             <div class="upcoming-dates__row-item upcoming-dates__end-date">15 March 2020</div>
             <div class="upcoming-dates__row-item upcoming-dates__action">
                 <a href="#" class="link link--tertiary link--link">
@@ -28,7 +28,7 @@
         </div>
         <div class="upcoming-dates__row">
             <div class="upcoming-dates__row-item upcoming-dates__row-item--mobile" aria-hidden="true">10 March 2020 to 15 March 2020</div>
-            <div class="upcoming-dates__row-item upcoming-dates__start-date">10 March 2020 <span class="upcoming-dates__start-date--mobile">to</span></div>
+            <div class="upcoming-dates__row-item upcoming-dates__start-date">10 March 2020</div>
             <div class="upcoming-dates__row-item upcoming-dates__end-date">15 March 2020</div>
             <div class="upcoming-dates__row-item upcoming-dates__action">
                 <a href="#" class="link link--tertiary link--link">
