Fix for hover on multi line link on staff details area

--- a/rca/static_src/sass/components/_link.scss
+++ b/rca/static_src/sass/components/_link.scss
@@ -255,4 +255,11 @@
         @include font-size(xxs);
         margin-top: ($gutter * 1.5);
     }
+
+    .key-details--staff .key-details__list-item & {
+        &#{$root}--tertiary {
+            // Make sure multi line lines hover only shown on last line of link
+            display: inline;
+        }
+    }
 }
