Research centre spacing

--- a/rca/static_src/sass/components/_staff-overview.scss
+++ b/rca/static_src/sass/components/_staff-overview.scss
@@ -37,4 +37,9 @@
             grid-column: 4 / span 1;
         }
     }
+
+    .app--research-centre & {
+        padding-top: 0;
+        padding-bottom: 0;
+    }
 }
