--- a/rca/project_styleguide/templates/patterns/organisms/news/news.html
+++ b/rca/project_styleguide/templates/patterns/organisms/news/news.html
@@ -17,7 +17,7 @@
 
         {% if forloop.last and not forloop.first %}
                 <a class="news__view-all link link--secondary link--link body body--two" href="#">
-                    <span class="link__label">See all news & events</span>
+                    <span class="link__label">{{ cta|default:"See all news & events" }}</span>
                     <svg class="link__icon" width="12" height="8"><use xlink:href="#arrow"></use></svg>
                 </a>
             </div>
