--- a/rca/project_styleguide/templates/patterns/pages/researchcentre/research_centre.html
+++ b/rca/project_styleguide/templates/patterns/pages/researchcentre/research_centre.html
@@ -121,7 +121,7 @@
                 </div>
 
                 <div class="section__notch">
-                    <div class="section__notch-fill section__notch-fill--third-col"></div>
+                    <div class="section__notch-fill section__notch-fill--fourth-col"></div>
                 </div>
 
             </section>
@@ -135,71 +135,77 @@
                 </div>
                 
                 <div class="section__notch">
-                    <div class="section__notch-fill section__notch-fill--third-col"></div>
+                    <div class="section__notch-fill section__notch-fill--first-col"></div>
                 </div>
 
             </section>
 
-            <section class="section bg bg--light">
+            {% with staff=related_staff %}
+                {% if staff %}
+                     <section class="section bg bg--light">
+                        
+                        <div class="section__row section__row--first section__row--last">
+                            {% if staff|length > 1 %}
+                                {% include "patterns/organisms/staff-overview/staff-overview.html" with title="Staff" %}
+                            {% else %}
+                                {% include "patterns/organisms/staff-overview/staff-overview--single.html" with title="Staff" %}
+                            {% endif %}
+                        </div>
 
-                {% with staff=related_staff %}
-                    {% if staff %}
-                        {% if staff|length > 1 %}
-                            {% include "patterns/organisms/staff-overview/staff-overview.html" with title="Staff" %}
-                        {% else %}
-                            {% include "patterns/organisms/staff-overview/staff-overview--single.html" with title="Staff" %}
-                        {% endif %}
-                    {% endif %}
-                {% endwith %}
+                        <div class="section__notch">
+                            <div class="section__notch-fill section__notch-fill--second-col"></div>
+                        </div>
 
-                <div class="section__notch">
-                    <div class="section__notch-fill section__notch-fill--second-col"></div>
-                </div>
-
-            </section>
-
+                    </section>
+                {% endif %}
+            {% endwith %}
 
             {% if page.centre_news %}
-                <section class="section section--end section--top-space bg bg--dark">
-                    <div class="partnerships">
-                        <div class="partnerships__header grid">
-                            <h2 class="partnerships__heading heading heading--one">{{ page.centre_news.title }}</h2>
-                        </div>
-                        <div class="partnerships__carousel">
-                            {% include "patterns/organisms/carousel/carousel--square.html" with carousel=page.centre_news.slides modifier='carousel--square' datatag='data-square-carousel' %}
-                        </div>
+                <section class="section bg bg--dark">
 
+                    <div class="section__row section__row--first section__row--last">
+
+                        <div class="partnerships">
+                            <div class="partnerships__header grid">
+                                <h2 class="partnerships__heading heading heading--two">{{ page.centre_news.title }}</h2>
+                            </div>
+                            <div class="partnerships__carousel">
+                                {% include "patterns/organisms/carousel/carousel--square.html" with carousel=page.centre_news.slides modifier='carousel--square' datatag='data-square-carousel' %}
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="section__notch">
+                        <div class="section__notch-fill section__notch-fill--second-col"></div>
                     </div>
 
                 </section>
             {% endif %}
 
-            <section class="section section--end bg bg--light">
-
-                <div class="section__notch section__notch--top">
-                    <div class="section__notch-fill section__notch-fill--third-col"></div>
-                </div>
-
-                {% if page.news_and_events %}
-                    <div class="section__container">
+            <section class="section section--start section--end bg bg--light">
+                <div class="section__container">
+                    {% if page.news_and_events %}
                         <header class="section__header grid">
-                            <h3 class="section__heading section__heading--primary heading heading--two">What&#39;s happening at the RCA</h3>
+                            <h3 class="section__heading section__heading--primary heading heading--two">News</h3>
                         </header>
-                        <div class="section__content grid">
-                            {% include "patterns/organisms/news/news.html" with news=page.news_and_events %}
-                        </div>
-                    </div>
-                {% endif %}
-
-                <div class="section__row">
-                    {% if page.related_links %}
-                        <section class="section section--top-space">
-                            {% include "patterns/organisms/related-links/related-links.html" with related_links=page.related_links title="External links" %}
-                        </section>
                     {% endif %}
+                    <div class="section__content">
+                        {% if page.news_and_events %}
+                            <div class="section__row grid">
+                                {% include "patterns/organisms/news/news.html" with news=page.news_and_events cta="See all news" %}
+                            </div>
+                        {% endif %}
+                        {% if page.related_links %}
+                            <div class="section__row">
+                                <section class="section section--top-space">
+                                    {% include "patterns/organisms/related-links/related-links.html" with related_links=page.related_links title="External links" %}
+                                </section>
+                            </div>
+                        {% endif %}
+                    </div>
                 </div>
-
             </section>
+
         </div>
 
     </div>
