Decreasing max width/height to stop bleed

--- a/rca/static_src/sass/components/_profile-image.scss
+++ b/rca/static_src/sass/components/_profile-image.scss
@@ -6,8 +6,9 @@
             display: block;
             width: 100%;
             height: auto;
-            max-height: 680px;
-            max-width: 680px;
+            // prevent it bleeding into key details area
+            max-height: 560px;
+            max-width: 560px;
             margin-left: auto;
         }
     }
